update: Creation of the FileManager and Reports class methods. And in the sorting class a binary insertion and automatic sorting.